@@ -35,6 +35,13 @@
 		    <td class="value"><span id="facebook"><i>Checking...</i></span></td>
 		    <td class="desc">Install the <a href="http://apps.facebook.com/openflights">OpenFlights Facebook app</a> to update your flights to your <a href="http://facebook.com">Facebook</a> profile.</td>
 		  </tr><tr>
+		    <td class="key">Banners</td>
+		    <td class="value" colspan=2>Blog banner (HTML)<br>
+		      <textarea name="banner_html" cols="60" rows="4" readonly></textarea><br>
+		      Bulletin board banner (phpBB)<br>
+		      <textarea name="banner_phpbb" cols="60" rows="3" readonly></textarea><br>
+		      <span id="banner_img"><i>Loading...</i></span></td>
+		  </tr><tr>
 		    <td class="key">E-mail <i>(optional)</i>&nbsp;&nbsp;</td>
 		    <td class="value"><INPUT type="text" name="email" size="20"></td>
 		    <td class="desc">If you forget your password, we can mail you a new one to this address.  We will <i>never</i> send you any other mail or share your private information, see <a href="#" onClick="window.open('/help/privacy.html', 'Help', 'width=500,height=400,scrollbars=yes')">privacy policy</a> for details.</td>
