@@ -33,7 +33,7 @@
 
 	    <div id="news" style="display: none">
 	      <img src="/img/close.gif" height=17 width=17 onClick='JavaScript:closeNews()'> 
-	      <B>News</b>: 26 Mar 2009: <a href="/blog/">Train, road and ship segments now supported! Details in blog.</a>
+	      <B>News</b>: 13 May 2009: <a href="/blog/">Banners for blogs, websites and bulletin boards!  Details on the blog.</a>
 	    </div>
 	    
 	    <div id="ajaxloader">
